# symphony

openspec/changes/symphony-rust-impl/: tasks.md
symphony-rust/: Cargo.toml
symphony-rust/src/: agent_runner.rs  config.rs  domain.rs  error.rs  lib.rs  logging.rs  main.rs  prompt.rs  ssh.rs  workflow.rs  workspace.rs
symphony-rust/src/codex/: app_server.rs  events.rs  mod.rs  tools.rs
symphony-rust/src/dashboard/: mod.rs  render.rs  sparkline.rs
symphony-rust/src/http/: dashboard.rs  mod.rs  routes.rs  server.rs
symphony-rust/src/linear/: adapter.rs  client.rs  mod.rs  queries.rs  types.rs
symphony-rust/src/orchestrator/: dispatch.rs  mod.rs  reconciliation.rs  retry.rs  state.rs
symphony-rust/src/tracker/: linear_adapter.rs  memory.rs  mod.rs
symphony-rust/tests/: cli.rs  e2e.rs
